# codex-helper

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  package-lock.json  package.json  tsconfig.json  tsdown.config.ts
.agents/skills/version-release/: SKILL.md
.github/workflows/: ci.yml  release.yml
data/: codex-rate-card.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-x64-msvc/: package.json
scripts/: assemble-release-assets.mjs  bench-rust-run.mjs  check-release.mjs  compare-rust-run.mjs  package-release-artifact.mjs  publish-npm-artifacts.mjs  release-targets.mjs  smoke-npm-shim.mjs  smoke-rust-cli.mjs  verify-release-layout.mjs
src/: account_history.rs  auth.rs  cli.rs  cli.ts  cycles.rs  cycles.ts  doctor.rs  doctor.ts  error.rs  format.rs  index.ts  lib.rs  main.rs  pricing.rs  pricing.ts  prompt.rs  session_scan.rs  stats.rs  stats.ts  storage.rs  storage.ts  test_utils.rs  time.rs  usage_mode_history.rs
src/cycles/: accounts.rs  cli.rs  formatters.rs  mod.rs  reports.rs  store.rs  time.rs  usage.rs  windows.rs
src/limits/: cli.rs  events.rs  formatters.rs  mod.rs  reports.rs  scan.rs
src/stats/: accumulators.rs  cli.rs  events.rs  fast_candidates.rs  formatters.rs  mod.rs  reports.rs  scan.rs
test/: auth.test.ts  cli.test.ts  cycles.test.ts  doctor.test.ts  index.test.ts  pricing.test.ts  stats.test.ts
test/fixtures/rust-run/: README.md
test/fixtures/rust-run/codex-home/: auth.json
test/fixtures/rust-run/codex-home/codex-ops/: auth-account-history.json  stat-cycles.json  usage-mode-history-fast-fixture.json
test/fixtures/rust-run/codex-home/codex-ops/auth-profiles/: account-other.json
test/fixtures/rust-run/codex-home/fast-candidate-sessions/2026/05/10/: rollout-2026-05-10T00-00-00-fast-baseline.jsonl  rollout-2026-05-10T00-00-00-fast-candidates.jsonl
test/fixtures/stat-poc/sessions/2026/05/10/: rollout-2026-05-10T09-00-00-poc-session-alpha.jsonl
test/fixtures/stat-poc/sessions/2026/06/02/: rollout-2026-06-02T10-00-00-poc-session-beta.jsonl
tests/: cli_auth_smoke.rs  cli_cycle_smoke.rs  cli_doctor_smoke.rs  cli_fast_smoke.rs  cli_limit_smoke.rs  cli_parser_smoke.rs  cli_release_smoke.rs  cli_shim_smoke.rs  cli_smoke.rs  cli_stat_smoke.rs
tests/common/: mod.rs
(+4 files in other folders)
