[package]
name = "codex-ops"
version = "0.1.0"
edition = "2021"
description = "A local operations CLI for Codex auth, usage, and cycle workflows."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ChenLuoi/codex-helper"
homepage = "https://github.com/ChenLuoi/codex-helper"
keywords = ["codex", "cli", "usage"]
categories = ["command-line-utilities"]
publish = ["crates-io"]
exclude = [
    ".github/**",
    ".gitignore",
    ".ignore",
    "AGENTS.md",
    "bin/**",
    "Cargo.toml.orig",
    "justfile",
    "npm/**",
    "package*.json",
    "scripts/**",
    "src/bin/**",
    "task/**",
    "test/**",
    "tests/**",
]

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
